--- a/wikipedia-viewer/style.css
+++ b/wikipedia-viewer/style.css
@@ -1,17 +1,22 @@
 body{
   background-color: #3498db;
-  /*background-image: url("http://wallarthd.com/wp-content/uploads/2015/10/Wikipedia-3d-Hd-Wallpaper.jpg");*/
-  font-family: 'Slabo 27px', serif;
+  /*font-family: 'Slabo 27px', serif;*/
+  font-family: 'Arvo', serif;
   color: #fff;
 }
 h1{
   text-align: center;
   font-size: 40px;
 }
-a, .search-article{
+
+.intro{
+   padding-bottom: 10px;
+}
+
+.random{
   display: block;
   text-align: center;
-  border: 2px outset #fff;
+  /*border: 2px outset #fff;*/
   width: 150px;
   margin: auto;
   margin-top: 50px;
@@ -19,6 +24,7 @@ a, .search-article{
   padding-bottom: 10px;
   color: #fff;
   text-decoration: none;
+  cursor: pointer;
 }
 
 button{
@@ -27,14 +33,49 @@ button{
   border: none;
   font-family: inherit;
   font-size: 16px;
+  display: inline-block;
+  cursor: pointer;
 }
-.article-search{
-  display: block;
+.input{
+  /*display: block;*/
   margin: auto;
   margin-top: 50px;
   border: 4px solid #2980b9;
   height: 30px;
   font-size: 15px;
   color: #2980b9;
+  text-align: center;
+}
+
+/*Começando de novo*/
+.search{
+  position:relative;
+  margin-top: 50px;
+
+}
+.search:before{
+  font-family: FontAwesome;
+  top:0;
+  left:-5px;
+  padding-right:10px;
+  content: "\f002";
+  font-size: 30px;
+}
+
+.close{
+  position:relative;
+  margin
+}
+
+.close:before{
+  font-family: FontAwesome;
+  top:0;
+  left:-5px;
+  padding-right:10px;
+  content:  "\f00d";
+  font-size: 15px;
+}
+
+.search-form{
   text-align: center;
 }
